LIST(APPEND COMMON_HEADERS kern_integers.hpp)
LIST(APPEND COMMON_HEADERS kern_macro.hpp)
LIST(APPEND COMMON_HEADERS kern_status.hpp)

LIST(APPEND COMMON_SOURCES kern_runtime.cpp)
LIST(APPEND COMMON_SOURCES kern_basic_malloc.cpp)
LIST(APPEND COMMON_SOURCES kern_status.cpp)

INCLUDE_DIRECTORIES(PhyProtocol)
ADD_SUBDIRECTORY(PhyProtocol)

INCLUDE_DIRECTORIES(Proc)
ADD_SUBDIRECTORY(Proc)

ADD_LIBRARY(Common STATIC
	${COMMON_HEADERS}
	${COMMON_SOURCES})

TARGET_LINK_LIBRARIES(Common PRIVATE PhyProtocol Proc)