LIST(APPEND DEVICES_HEADERS kern_drivers.hpp)
LIST(APPEND DEVICES_SOURCES kern_drivers.cpp)

OPTION(EnablePL011 "Enable PL011 UART driver" ON)

IF (${EnablePL011})
ADD_SUBDIRECTORY(PL011)
ENDIF()

ADD_LIBRARY(Devices STATIC ${DEVICES_HEADERS} ${DEVICES_SOURCES})

IF (${EnablePL011})
TARGET_LINK_LIBRARIES(Devices PL011)
ENDIF()