LIST(APPEND SYSTEM_HEADERS Syscalls/Syscalls.hpp)
LIST(APPEND SYSTEM_SOURCES Syscalls/Syscalls.cpp)

LIST(APPEND SYSTEM_HEADERS IPC/kern_event.hpp)
LIST(APPEND SYSTEM_SOURCES IPC/kern_event.cpp)

ADD_LIBRARY(System STATIC
	${SYSTEM_HEADERS}
	${SYSTEM_SOURCES})

INCLUDE_DIRECTORIES(Proc)
ADD_SUBDIRECTORY(Proc)

TARGET_LINK_LIBRARIES(System PRIVATE Common Proc)