LIST(APPEND SYSTEM_HEADERS Syscalls/Syscalls.hpp)
LIST(APPEND SYSTEM_SOURCES Syscalls/Syscalls.cpp)

LIST(APPEND SYSTEM_HEADERS IPC/kern_event.hpp)
LIST(APPEND SYSTEM_SOURCES IPC/kern_event.cpp)

LIST(APPEND SYSTEM_HEADERS PhyMemory/kern_alloc.hpp)
LIST(APPEND SYSTEM_SOURCES PhyMemory/kern_alloc.cpp)

LIST(APPEND SYSTEM_HEADERS Handle/kern_handle.hpp)
LIST(APPEND SYSTEM_SOURCES Handle/kern_handle.cpp)

INCLUDE_DIRECTORIES(PhyProtocol)
ADD_SUBDIRECTORY(PhyProtocol)

ADD_LIBRARY(System STATIC
	${SYSTEM_HEADERS}
	${SYSTEM_SOURCES})

INCLUDE_DIRECTORIES(Proc)
ADD_SUBDIRECTORY(Proc)

TARGET_LINK_LIBRARIES(System PRIVATE Common Proc PhyProtocol)