LIST(APPEND SYSM_SOURCES sysm/sysm.hpp)
LIST(APPEND SYSM_SOURCES sysm/sysm.cpp)

LIST(APPEND PRGM_SOURCES prgm/prgm.cpp)

LIST(APPEND ARCH_SOURCES SDK/sys.S)
LIST(APPEND ARCH_SOURCES SDK/init.S)

ADD_EXECUTABLE(sysm ${SYSM_SOURCES} ${ARCH_SOURCES})
ADD_EXECUTABLE(prgm ${PRGM_SOURCES} ${ARCH_SOURCES})

SET_TARGET_PROPERTIES(sysm PROPERTIES LINK_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/linkin.ld)
SET_TARGET_PROPERTIES(prgm PROPERTIES LINK_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/linkin.ld)