LIST(APPEND SYSM_HEADERS sysm/sysm.hpp)
LIST(APPEND SYSM_SOURCES sysm/sysm.cpp)

LIST(APPEND PRGM_SOURCES prgm/prgm.cpp)

LIST(APPEND SDK_SOURCES SDK/sys.S)
LIST(APPEND SDK_SOURCES SDK/init.cpp)

ADD_LIBRARY(SDK STATIC ${SDK_SOURCES})
ADD_EXECUTABLE(sysm ${SYSM_SOURCES} ${SYSM_HEADERS})
ADD_EXECUTABLE(prgm ${PRGM_SOURCES})

TARGET_LINK_LIBRARIES(sysm PRIVATE SDK)
TARGET_LINK_LIBRARIES(prgm PRIVATE SDK)

SET_TARGET_PROPERTIES(sysm PROPERTIES LINK_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/linkin.ld)
SET_TARGET_PROPERTIES(prgm PROPERTIES LINK_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/linkin.ld)

TARGET_LINK_OPTIONS(sysm PRIVATE "-T${CMAKE_CURRENT_SOURCE_DIR}/linkin.ld" "-pie")
TARGET_LINK_OPTIONS(prgm PRIVATE "-T${CMAKE_CURRENT_SOURCE_DIR}/linkin.ld" "-pie")