LIST(APPEND BOARD_HEADERS arch.hpp)
LIST(APPEND BOARD_HEADERS Board.hpp)

LIST(APPEND BOARD_SOURCES arch.cpp)
LIST(APPEND BOARD_SOURCES Board.cpp)

LIST(APPEND BOARD_SOURCES BoardRuntime/BoardRuntime.cpp)
LIST(APPEND BOARD_HEADERS BoardRuntime/BoardRT.hpp)

ADD_LIBRARY(Board STATIC
	${BOARD_HEADERS}
	${BOARD_SOURCES})

ADD_LIBRARY(ArchLibProper STATIC mock.cpp)