LIST(APPEND PROC_HEADERS kern_cpu.hpp)
LIST(APPEND PROC_SOURCES kern_cpu.cpp)

LIST(APPEND PROC_HEADERS kern_sched.hpp)
LIST(APPEND PROC_SOURCES kern_sched.cpp)

LIST(APPEND PROC_HEADERS kern_proc.hpp)
LIST(APPEND PROC_SOURCES kern_proc.cpp)

LIST(APPEND PROC_HEADERS kern_thread.hpp)
LIST(APPEND PROC_SOURCES kern_thread.cpp)

ADD_LIBRARY(Proc STATIC
	${PROC_HEADERS}
	${PROC_SOURCES})