LIST(APPEND ARCH_HEADERS arch.hpp)
LIST(APPEND ARCH_HEADERS gic.hpp)
LIST(APPEND ARCH_HEADERS ints.hpp)
LIST(APPEND ARCH_HEADERS mmu.hpp)

LIST(APPEND ARCH_SOURCES gic.cpp)
LIST(APPEND ARCH_SOURCES ints.cpp)
LIST(APPEND ARCH_SOURCES mmu.cpp)
LIST(APPEND ARCH_SOURCES arch.cpp)

LIST(APPEND ARCH_SOURCES entry.S)
LIST(APPEND ARCH_SOURCES isr.S)

ADD_LIBRARY(ArchLibProper STATIC
	${ARCH_SOURCES})
