LIST(APPEND BOOT_SOURCES Boot.cpp)
LIST(APPEND BOOT_SOURCES entry.S)

ADD_LIBRARY(Boot STATIC ${BOOT_HEADERS} ${BOOT_SOURCES})
TARGET_LINK_LIBRARIES(Boot FreestandingArchLib)
TARGET_LINK_LIBRARIES(Boot Board)
TARGET_LINK_LIBRARIES(Boot BoardRT)
TARGET_LINK_LIBRARIES(Boot CxxRuntime)

ADD_DEPENDENCIES(Boot pkernel)